--- a/_posts/0000-01-02-nuovodw.md
+++ b/_posts/0000-01-02-nuovodw.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to nuovodw's slide!"
 ---
 This is nuovodw's slide
 Use the left arrow to go back!
