--- a/_posts/0000-01-02-nuovodw.md
+++ b/_posts/0000-01-02-nuovodw.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to nuovodw's slide!"
 ---
-This is nuovodw's slide
+This is my awesome slide
 Use the left arrow to go back!
